--- a/blockelement.html/mediaqueryhmwk4.html/mediaquery4.css
+++ b/blockelement.html/mediaqueryhmwk4.html/mediaquery4.css
@@ -1,7 +1,12 @@
 /* Set the backgorund color of body to tan */
 body {
     background-color: tan;
-}
+
+    <div style="width:50%;">
+     Variable content.
+      <div id="a"></div>
+    Varuable Cintect
+    </div>
 
 /* On screens that are 992px or less, set the background color to blue */
     
@@ -12,14 +17,12 @@ body {
     }
 
     /* On screens that are 600px or less, set background color to olive */
-   
-
      add
-    @media screen and (max-width: 600) {
+    media screen and max-width 600()) { 
         body {
-            background-color: olive;
+            background-color: rgb(198, 11, 245);
         }
-    }    
+        
 
 
 
